This is mostly a bug-fix, since this change was missed back in 24.4 when
symbol-function was changed not to signal `void-function' any more.

+++
*** As a consequence, the second arg of `indirect-function' is now obsolete.

+++
** Comint, term, and compile do not set the EMACS env var any more.
Use the INSIDE_EMACS environment variable instead.

+++
** `save-excursion' does not save&restore the mark any more.
Use `save-mark-and-excursion' if you want the old behavior.

+++
** `read-buffer' and `read-buffer-function' can now be called with a 4th
argument (`predicate').

+++
** `completion-table-dynamic' by default stays in the minibuffer.
The minibuffer will be the current buffer when the function is called.
If you want the old behavior of calling the function in the buffer
from which the minibuffer was entered, use the new argument
`switch-buffer' to `completion-table-dynamic'.

---
** window-configurations no longer record the buffers' marks.

---
** inhibit-modification-hooks now also inhibits lock-file checks, as well as
active region handling.

+++
** deactivate-mark is now buffer-local.

+++
** `cl-the' now asserts that its argument is of the given type.

+++
** `process-running-child-p' may now return a numeric process
group ID instead of `t'.

+++
** Mouse click events on mode line or header line no longer include
any reference to a buffer position.  The 6th member of the mouse
position list returned for such events is now nil.

---
** Menu items in keymaps do not support the "key shortcut cache" any more.
These slots used to hold key-shortcut data, but have been obsolete since
Emacs-21.

---
** Emacs no longer downcases the first letter of a system diagnostic
when signaling a file error.  For example, it now reports "Permission
denied" instead of "permission denied".  The old behavior was problematic
in languages like German where downcasing rules depend on grammar.

+++
** New variable ‘text-quoting-style’ to control how Emacs translates quotes.